--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-job="style="width=150px" height="150px" background color="#000000""
+.job="style="width=150px" height="150px" background color="#000000""
 
-hello-accio= Text color= "#ffffff" Left margin= "32px" Padding= "10px " 
+.hello-accio= Text color= "#ffffff" Left margin= "32px" Padding= "10px " 
 /* Your CSS Code here. */
