--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
-#job
+.job 
 {
 	width:150px; 
 	height:150px; 
 	background color:#000000;
 	}
 
+
 .hello-accio {
-	Text color:#ffffff; 
-	Left margin:32px; 
-	Padding:10px;
+	Text color: #ffffff; 
+	Left margin: 32px; 
+	Padding: 10px;
 }
 /* Your CSS Code here. */
