--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,7 @@
-.accio 
-{
-	width:150px; 
-	height:150px; 
-	background color:rgb(255, 255, 255);
-	}
 
 
 .hello-accio {
-	Text color: #ffffff; 
-	Left margin: 32px; 
-	Padding: 10px;
+    color: #ffffff;
+    margin-left: 32px;
+    padding: 10px;
 }
-/* Your CSS Code here. */
